SERVER-18461 cover range predicates comparing BinData in building index bounds

Closes #973

Signed-off-by: David Storch <david.storch@10gen.com>
(cherry picked from commit a641576b7d811577e28eefc6322e93e3e4a27511)