src/mongo/db/query/index_bounds_builder.cpp
@@ -369,7 +369,7 @@ namespace mongo {
             verify(dataObj.isOwned());
             oilOut->intervals.push_back(makeRangeInterval(dataObj, typeMatch(dataObj), true));
 
-            if (dataElt.isSimpleType()) {
+            if (dataElt.isSimpleType() || dataElt.type() == BinData) {
                 *tightnessOut = IndexBoundsBuilder::EXACT;
             }
             else {
@@ -406,7 +406,7 @@ namespace mongo {
                 oilOut->intervals.push_back(interval);
             }
 
-            if (dataElt.isSimpleType()) {
+            if (dataElt.isSimpleType() || dataElt.type() == BinData) {
                 *tightnessOut = IndexBoundsBuilder::EXACT;
             }
             else {
@@ -442,7 +442,7 @@ namespace mongo {
                 oilOut->intervals.push_back(interval);
             }
 
-            if (dataElt.isSimpleType()) {
+            if (dataElt.isSimpleType() || dataElt.type() == BinData) {
                 *tightnessOut = IndexBoundsBuilder::EXACT;
             }
             else {
@@ -472,7 +472,7 @@ namespace mongo {
             verify(dataObj.isOwned());
 
             oilOut->intervals.push_back(makeRangeInterval(dataObj, true, typeMatch(dataObj)));
-            if (dataElt.isSimpleType()) {
+            if (dataElt.isSimpleType() || dataElt.type() == BinData) {
                 *tightnessOut = IndexBoundsBuilder::EXACT;
             }
             else {
